--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "cypress": "^9.5.3",
     "msw": "^0.39.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
